IOUtils.toByteArray -> InputStream#readAllBytes